ams: work in progress for C6

--- a/src/Applications/GAAS_App/avhrr_l2a.pcf.tmpl
+++ b/src/Applications/GAAS_App/avhrr_l2a.pcf.tmpl
@@ -19,7 +19,7 @@ AVHRR_L2A_TPW_FILE        = ${EXPID}.gaas_bkg.sfc.%y4%m2%d2_%h2z.nc4
 AVHRR_L2A_AOD_FILE        = ${EXPID}.gaas_bkg.sfc.%y4%m2%d2_%h2z.nc4
 
 AVHRR_L2A_NN_FILE         = ExtData/g5chem/x/NN/nnr_001.avhrr_Tau.net
-AVHRR_L2A_BLANK_ODS       = ExtData/g5chem/x/blank.ods
+AVHRR_L2A_BLANK_ODS       = ExtData/g5chem/x/blank_syn8.ods
 AVHRR_L2A_COXMUNK_LUT     = ExtData/g5chem/x/avhrr.cox-munk_lut.npz
 
 #END AVHRR_L2A  processing
