--- a/src/Applications/GAAS_App/ana_aod.j.tmpl
+++ b/src/Applications/GAAS_App/ana_aod.j.tmpl
@@ -50,11 +50,15 @@ touch $EXTDATA/.no_archiving
 # use AOD_list nodes for parallel runs which need to share nodes
 #---------------------------------------------------------------
 if ($aod_parallel_flag) then
-   setenv AOD_NODEFILE "$AODWORK/AOD_list"
+   setenv AOD_NODEFILE "PBS_NODEFILE=$AODWORK/AOD_list;"
 else
-   setenv AOD_NODEFILE $PBS_NODEFILE
+   if ( $?PBS_NODEFILE ) then
+       setenv AOD_NODEFILE "PBS_NODEFILE=${PBS_NODEFILE};"
+   else
+       setenv AOD_NODEFILE 
+   endif
 endif
-setenv MPIRUN "PBS_NODEFILE=$AOD_NODEFILE;$MPIRUN_AOD -np $NCPUS_AOD"
+setenv MPIRUN "$AOD_NODEFILE $MPIRUN_AOD -np $NCPUS_AOD"
 
 # loop for two time steps
 #------------------------
