ams: reconciled with CVS tag ams-EnADAS-5_16_4-01

--- a/src/Applications/GAAS_App/ana.rc.tmpl
+++ b/src/Applications/GAAS_App/ana.rc.tmpl
@@ -27,9 +27,11 @@ ODS_files::
 
 #___TERRA___${FVWORK}/nnr_002.MOD04_L2a.land.%y4%m2%d2_%h200z.ods
 #___TERRA___${FVWORK}/nnr_002.MOD04_L2a.ocean.%y4%m2%d2_%h200z.ods
+#___TERRA___${FVWORK}/nnr_002.MOD04_L2a.deep.%y4%m2%d2_%h200z.ods
 
 #___AQUA___${FVWORK}/nnr_002.MYD04_L2a.land.%y4%m2%d2_%h200z.ods
 #___AQUA___${FVWORK}/nnr_002.MYD04_L2a.ocean.%y4%m2%d2_%h200z.ods
+#___AQUA___${FVWORK}/nnr_002.MYD04_L2a.deep.%y4%m2%d2_%h200z.ods
 
 #___MISR___${FVWORK}/misr_F12_0022.bright_tc8.obs.%y4%m2%d2.ods
 
